Formulabar: Fix buttons jumping position
Before this commit the buttons would jump position between default
button group and cell edit mode button group (when acceptformula and
cancelformula buttons appear)

--- a/browser/css/spreadsheet.css
+++ b/browser/css/spreadsheet.css
@@ -246,12 +246,6 @@
 	align-items: start;
 }
 
-#formulabar-buttons-toolbox > div {
-	align-items: start;
-	margin-left: auto;
-	text-align: center;
-}
-
 #formulabar {
 	padding: 4px;
 	background-color: var(--color-main-background);
@@ -264,7 +258,7 @@
 
 #formulabar > .root-container > .formulabar {
 	display: grid;
-	grid-template-columns: 110px 120px auto;
+	grid-template-columns: 110px 106px auto;
 }
 
 /* sheet tabs */
